# Quadruped-Robot

./: README.md
control_algorithm_simulation/: Trot_plot_format.m  plot_format.m  sim_SMC_algorithm.slx  sim_SMC_algorithm_SMCtest.slx
controller/: saturation.m
controllers/: SMC_controller.m  init.m  saturation.m  sim_SMC.slx  temp.mat  webots_proto.m
controllers/main_SMC_controller/: GaitPlanner.hpp  LegController2.hpp  Makefile  SMC_controller.c  SMC_controller.h  SMC_controller_initialize.c  SMC_controller_initialize.h  SMC_controller_terminate.c  SMC_controller_terminate.h  main_SMC_controller.cpp  rtwtypes.h
data/: bound_csv_plotformat.m  joint_data_20260506_211626_501.csv  stats_summary_20260506_211331_298.csv  stats_summary_20260506_211626_501.csv  stats_summary_20260506_211732_168.csv  stats_summary_bound.csv  stats_summary_pace.csv  stats_summary_trot.csv  stats_summary_walk.csv
dynamics/: KINEMATIC AND DYNAMIC MODELING.docx  MoHinh_ChanRobot_2DOF.mat  dynamicsModeling_QuadrupedRobot.m  ~$NEMATIC AND DYNAMIC MODELING.docx  ~WRL1737.tmp
gaits/: Trot_Trajectory.docx  ~$ot_Trajectory.docx  ~WRL2197.tmp
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/quadruped_smc_ros2/share/quadruped_smc_ros2/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/quadruped_smc_ros2/share/quadruped_smc_ros2/launch/: robot_launch.py
install/quadruped_smc_ros2/share/quadruped_smc_ros2/resource/: robot_8dof.wbt
log/: latest_build
quadruped_smc_ros2/: CMakeLists.txt  plugin.xml
quadruped_smc_ros2/include/quadruped_smc_ros2/: LegController.hpp  quadruped_driver.hpp
quadruped_smc_ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
quadruped_smc_ros2/install/quadruped_smc_ros2/include/quadruped_smc_ros2/: LegController2.hpp  quadruped_driver.hpp  rtwtypes.h
quadruped_smc_ros2/install/quadruped_smc_ros2/lib/quadruped_smc_ros2/: error_monitor_node
quadruped_smc_ros2/install/quadruped_smc_ros2/share/ament_index/resource_index/package_run_dependencies/: quadruped_smc_ros2
quadruped_smc_ros2/install/quadruped_smc_ros2/share/ament_index/resource_index/parent_prefix_path/: quadruped_smc_ros2
quadruped_smc_ros2/install/quadruped_smc_ros2/share/quadruped_smc_ros2/: local_setup.sh  package.bash  package.sh  package.zsh
quadruped_smc_ros2/install/quadruped_smc_ros2/share/quadruped_smc_ros2/cmake/: quadruped_smc_ros2Config.cmake
quadruped_smc_ros2/install/quadruped_smc_ros2/share/quadruped_smc_ros2/config/: smc_params.yaml
quadruped_smc_ros2/install/quadruped_smc_ros2/share/quadruped_smc_ros2/launch/: robot_launch.py  sequence_launch.py
quadruped_smc_ros2/install/quadruped_smc_ros2/share/quadruped_smc_ros2/resource/: .robot_8dof.wbproj
quadruped_smc_ros2/log/: latest_build
quadruped_smc_ros2/src/: SMC_controller.c  SMC_controller_initialize.c  SMC_controller_terminate.c  error_monitor_node.cpp  gait_keyboard_node.cpp  quadruped_driver.cpp
quadruped_smc_ros2/urdf/: robot_description.urdf
resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: 8KHG4FsFJOZgfcE-6SjeOCVKVg0p.xml  8Sw1spLo7KNKg9rVxB4crcQuZGgd.xml  8Sw1spLo7KNKg9rVxB4crcQuZGgp.xml  CyihzQmFmXJgTdRTnB0cwuXc4YAd.xml  (+5 more)
worlds/: .robot_8dof.wbproj  robot_8dof.wbt
(+8 files in other folders)
