<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadruped_smc_ros2</name>
  <version>1.0.0</version>
  <description>Quadruped 8-DOF robot SMC controller integrated with Webots via ROS2</description>
  <maintainer email="huyentran5405@gmail.com">Huyen Tran</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>webots_ros2_driver</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <webots_ros2_driver plugin="${prefix}/quadruped_plugin.xml"/>
  </export>
</package>
